# CINU

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  boot.S  boot.ld  boot.s  build.sh  configure  configure.ac  cpu.h  cpu.s  gdt.c  gdt_s.h  gdt_s.s  grub.cfg  idt.c  idt.h  idt_load.h  idt_s.h  idt_s.s  interrupts.s  io.c  io.h  io.s  irq_s.h  irq_s.s  link.ld  log.c  log.h  main.c  multitasking.c  multitasking.h  pic.c  pic.h  (+13 more)
.github/workflows/: release .yaml  release.yaml  temp.yaml  test.yaml  update-configure.yaml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
src/boot/: boot.S  boot.asm  grub.cfg  stage1.S  stage2.S  stage2.ld
src/kernel/: ata.S  floppy.S  gdt.S  ide.S  idt.S  init.S  isr.S  kernel.S  kernel.asm  kernel.c  keyboard.S  link.ld  loader.S  mm.S  panic.S  pit.S  serial.S  speaker.S  syscall.S  test.S  tss.S  user.S  vga.S
src/kernel/cpu/: cpu.S
src/kernel/floppy/: floppy.S
src/kernel/gdt/: gdt.S  gdt.c  gdt.h  gdt_flush.S
src/kernel/idt/: idt.S  idt.c  idt.h  idt_stubs.S  idt_stubs.h
src/kernel/io/: io.S  io.h
src/kernel/irq/: irq.S  irq.c  irq.h  irq_stubs.S
src/kernel/isr/: isr.c  isr.h  isr_stubs.S  isr_stubs.h
src/kernel/mm/: mm.S  mm.S.unused
src/kernel/panic/: panic.S  panic.asm  panic.c  panic.h
src/kernel/pit/: pit.S
src/kernel/rings/: rings.S  rings.h
src/kernel/syscalls/: syscalls.S  syscalls.c  syscalls.h
src/kernel/vga/: logo.rgb  vga.S  vga.asm  vga.c  vga.h
src/user/: init.S  init.asm  init.c  link.ld
